Adding some front end elements to test the Shopping Cart